--- a/web.css
+++ b/web.css
@@ -114,7 +114,7 @@
             font-weight: bold;
             font-size: 18px;
             text-align: right;
-            color: #42a5f5; /* Beautiful blue */
+            color: #c0e396; 
         }
 
         .footer {
