--- a/web.css
+++ b/web.css
@@ -122,6 +122,7 @@
             text-align: center;
             margin-top: 20px;
             color: #555;
+									 background: #4CAF50;
             padding: 10px 0;
         }
     </style>
